[tool.poetry]
name = "scattr-ohbm"
version = "0.1.0"
description = "Repository housing package dependencies and analysis notebooks used for SCATTR for OHBM 2023"
authors = ["Jason Kai <tkai@uwo.ca>"]
readme = "README.md"
packages = [{include = "scattr_ohbm"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"
joblib = "^1.2.0"
dill = "^0.3.6"
seaborn = "^0.12.2"
pandas = "^1.5.3"
tqdm = "^4.64.1"
mne = "^1.3.0"
mne-connectivity = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
